// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataSources /> should render properly while loading 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-11 {
  height: 100%;
}

.emotion-10 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-10 tr {
  background-color: #252525;
}

.emotion-10 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-10 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-10 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-10 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-10 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-10 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-10 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-10 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(3) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  height: 100%;
  pointer-events: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

<div
    className="emotion-11"
  >
    <table
      className="emotion-10"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Name
          </th>
          <th
            className="emotion-0"
          >
            Source Type
          </th>
          <th
            className="emotion-0"
          >
            Path
          </th>
          <th
            className="emotion-0"
          >
            Date Created
          </th>
          <th
            className="emotion-0"
          >
            Date Modified
          </th>
          <th
            className="emotion-0"
          >
            File Types
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-6"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-9"
        >
          <td
            colSpan={7}
          >
            <div
              className="emotion-8"
            >
              Loading...
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<DataSources /> should render properly with data sources 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-0"
      >
        <svg
          data-file-name="checkmark.svg"
          width={20}
        />
      </div>
      <div
        className="emotion-1"
      >
        Data Source Created
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(3) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-34 {
  height: auto;
}

.emotion-26 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-26 tr {
  background-color: #252525;
}

.emotion-26 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-26 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-26 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-26 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-26 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-26 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-26 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-26 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-8 {
  display: inline-block;
  color: #191919;
  background-color: #b3b3b3;
  padding: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 8px;
  border-radius: 14px;
  font-family: Roboto Condensed;
}

.emotion-10 {
  position: relative;
}

.emotion-9 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-9:hover {
  background-color: #808080;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-28:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27 {
  color: #191919;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-29 {
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-30 {
  padding: 8px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-32:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-31 {
  color: #191919;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
    className="emotion-34"
  >
    <table
      className="emotion-26"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Name
          </th>
          <th
            className="emotion-0"
          >
            Source Type
          </th>
          <th
            className="emotion-0"
          >
            Path
          </th>
          <th
            className="emotion-0"
          >
            Date Created
          </th>
          <th
            className="emotion-0"
          >
            Date Modified
          </th>
          <th
            className="emotion-0"
          >
            File Types
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-6"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            test
          </td>
          <td>
            Google Cloud Storage
          </td>
          <td>
            gs://zorroa-dev-data/images
          </td>
          <td>
            2020-02-10 01:37:47
          </td>
          <td>
            2020-02-10 01:37:47
          </td>
          <td>
            <span
              className="emotion-8"
            >
              jpg
            </span>
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            test2
          </td>
          <td>
            Google Cloud Storage
          </td>
          <td>
            gs://zorroa-dev-data/image
          </td>
          <td>
            2020-02-10 01:40:26
          </td>
          <td>
            2020-02-10 01:40:26
          </td>
          <td>
            <span
              className="emotion-8"
            >
              jpg
            </span>
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            test3
          </td>
          <td>
            Google Cloud Storage
          </td>
          <td>
            gs://zorroa-dev-data
          </td>
          <td>
            2020-02-10 01:42:23
          </td>
          <td>
            2020-02-10 01:42:23
          </td>
          <td>
            <span
              className="emotion-8"
            >
              jpg
            </span>
            <span
              className="emotion-8"
            >
              jpeg
            </span>
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            test4
          </td>
          <td>
            Google Cloud Storage
          </td>
          <td>
            gs://zorroa-dev-data
          </td>
          <td>
            2020-02-10 16:21:18
          </td>
          <td>
            2020-02-10 16:21:18
          </td>
          <td>
            <span
              className="emotion-8"
            >
              jpg
            </span>
            <span
              className="emotion-8"
            >
              jpeg
            </span>
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            test5
          </td>
          <td>
            Google Cloud Storage
          </td>
          <td>
            gs://zorroa-dev-data
          </td>
          <td>
            2020-02-10 16:47:39
          </td>
          <td>
            2020-02-10 16:47:39
          </td>
          <td>
            <span
              className="emotion-8"
            >
              jpg
            </span>
            <span
              className="emotion-8"
            >
              jpeg
            </span>
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div
      className="emotion-33"
    >
      <button
        className="emotion-28"
        disabled={true}
        type="button"
      >
        <svg
          className="emotion-27"
          data-file-name="chevron.svg"
          width={16}
        />
      </button>
      <div
        className="emotion-29"
      >
        1
      </div>
      <div
        className="emotion-30"
      >
        of 
        1
      </div>
      <button
        className="emotion-32"
        disabled={true}
        type="button"
      >
        <svg
          className="emotion-31"
          data-file-name="chevron.svg"
          width={16}
        />
      </button>
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<DataSources /> should render properly with no data sources 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-11 {
  height: 100%;
}

.emotion-10 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-10 tr {
  background-color: #252525;
}

.emotion-10 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-10 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-10 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-10 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-10 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-10 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-10 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-10 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(3) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  height: 100%;
  pointer-events: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

<div
    className="emotion-11"
  >
    <table
      className="emotion-10"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Name
          </th>
          <th
            className="emotion-0"
          >
            Source Type
          </th>
          <th
            className="emotion-0"
          >
            Path
          </th>
          <th
            className="emotion-0"
          >
            Date Created
          </th>
          <th
            className="emotion-0"
          >
            Date Modified
          </th>
          <th
            className="emotion-0"
          >
            File Types
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-6"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-9"
        >
          <td
            colSpan={7}
          >
            <div
              className="emotion-8"
            >
              No data sources
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;
